--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.3.0",
     "express-session": "^1.2.0",
     "connect-redis": "^2.0.0",
-    "mongoose": "^3.8.12"
+    "mongoose": "^3.8.12",
+    "moment": "^2.6.0"
   }
 }
