--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
   "dependencies": {
     "blueimp-file-upload-expressjs": "^0.2.9",
     "body-parser": "~1.0.0",
+    "connect-multiparty": "^1.0.5",
     "connect-redis": "^2.0.0",
     "cookie-parser": "~1.0.1",
     "csurf": "^1.2.1",
     "debug": "~0.7.4",
     "express": "~4.2.0",
     "express-session": "^1.2.0",
+    "gravatar": "^1.0.6",
     "jade": "~1.3.0",
+    "marked": "^0.3.2",
     "moment": "^2.6.0",
     "mongoose": "^3.8.12",
     "morgan": "~1.0.0",
     "static-favicon": "~1.0.0",
-    "underscore": "^1.6.0",
-    "connect-multiparty": "^1.0.5",
-    "gravatar": "^1.0.6"
+    "underscore": "^1.6.0"
   }
 }
