--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "blueimp-file-upload-expressjs": "^0.2.9",
     "body-parser": "~1.0.0",
     "connect-multiparty": "^1.0.5",
     "connect-redis": "^2.0.0",
@@ -22,6 +21,7 @@
     "mongoose": "^3.8.12",
     "morgan": "~1.0.0",
     "static-favicon": "~1.0.0",
-    "underscore": "^1.6.0"
+    "underscore": "^1.6.0",
+    "mkdirp": "^0.5.0"
   }
 }
