--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "express": "~4.2.0",
     "express-session": "^1.2.0",
     "gravatar": "^1.0.6",
+    "htmlstrip-native": "0.0.2",
     "jade": "~1.3.0",
     "marked": "^0.3.2",
+    "mkdirp": "^0.5.0",
     "moment": "^2.6.0",
     "mongoose": "^3.8.12",
     "morgan": "~1.0.0",
     "static-favicon": "~1.0.0",
-    "underscore": "^1.6.0",
-    "mkdirp": "^0.5.0"
+    "underscore": "^1.6.0"
   }
 }
