--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "express": "~4.2.0",
     "express-session": "^1.2.0",
     "gravatar": "^1.0.6",
-    "htmlstrip-native": "0.0.2",
     "jade": "~1.3.0",
     "marked": "^0.3.2",
     "mkdirp": "^0.5.0",
@@ -23,6 +22,7 @@
     "mongoose": "^3.8.12",
     "morgan": "~1.0.0",
     "static-favicon": "~1.0.0",
+    "strip": "0.0.7",
     "underscore": "^1.6.0"
   }
 }
