找回密码发邮件

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "moment": "^2.6.0",
     "mongoose": "^3.8.12",
     "morgan": "~1.0.0",
+    "nodemailer": "^1.1.1",
+    "nodemailer-smtp-transport": "^0.1.12",
     "static-favicon": "~1.0.0",
     "strip": "0.0.7",
     "underscore": "^1.6.0"
