--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer-smtp-transport": "^0.1.12",
     "qn": "^0.2.2",
     "qs": "^2.3.3",
+    "sendmail": "^0.2.1",
     "serve-favicon": "^2.1.1",
     "strip": "0.0.7",
     "underscore": "^1.6.0"
