--- a/package.json
+++ b/package.json
@@ -21,14 +21,13 @@
     "jade": "~1.3.0",
     "marked": "^0.3.3",
     "mkdirp": "^0.5.0",
-    "moment": "^2.6.0",
+    "moment": "^2.18.0",
     "mongoose": "^4.0.3",
     "morgan": "~1.0.0",
     "nodemailer": "^1.1.1",
     "nodemailer-smtp-transport": "^0.1.12",
     "qn": "^0.2.2",
     "qs": "^2.3.3",
-    "semantic-ui": "^2.2.9",
     "sendmail": "^0.2.1",
     "serve-favicon": "^2.1.1",
     "strip": "0.0.7",
@@ -36,15 +35,6 @@
     "xss": "^0.3.3"
   },
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-1": "^6.13.0",
-    "css-loader": "^0.25.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "nodemon": "^1.11.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.2"
+    "nodemon": "^1.11.0"
   }
 }
