--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.2.0",
     "gravatar": "^1.0.6",
     "jade": "~1.3.0",
+    "lodash": "^4.17.4",
     "marked": "^0.3.3",
     "mkdirp": "^0.5.0",
     "moment": "^2.18.0",
@@ -31,7 +32,6 @@
     "sendmail": "^0.2.1",
     "serve-favicon": "^2.1.1",
     "strip": "0.0.7",
-    "underscore": "^1.6.0",
     "xss": "^0.3.3"
   },
   "devDependencies": {
