--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^0.16.0",
     "body-parser": "~1.0.0",
     "connect-multiparty": "^1.0.5",
     "connect-redis": "^2.0.0",
