--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.2.0",
     "gravatar": "^1.0.6",
     "jade": "~1.3.0",
+    "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "marked": "^0.3.3",
     "mkdirp": "^0.5.0",
