--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.2.1",
     "axios": "^0.16.0",
     "body-parser": "~1.17.1",
     "compression": "^1.6.2",
