--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "marked": "^0.5.0",
+    "md5-file": "^4.0.0",
     "mkdirp": "^0.5.0",
     "moment": "^2.22.2",
     "mongoose": "5.2.8",
