--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
     "axios": "^0.18.0",
-    "body-parser": "~1.17.1",
+    "body-parser": "^1.18.3",
     "compression": "^1.7.3",
-    "connect-multiparty": "^1.0.5",
+    "connect-multiparty": "^2.1.1",
     "connect-redis": "^3.3.3",
     "cookie-parser": "~1.4.3",
     "csurf": "^1.8.3",
