--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.22.2",
     "mongoose": "5.2.8",
     "morgan": "~1.9.0",
+    "node-telegram-bot-api": "^0.30.0",
     "nodemailer": "^4.6.8",
     "qn": "^1.3.0",
     "qs": "^6.5.2",
