--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
     "compression": "^1.7.3",
     "connect-multiparty": "^2.1.1",
     "connect-redis": "^3.3.3",
-    "cookie-parser": "~1.4.3",
     "csurf": "^1.8.3",
-    "debug": "~3.1.0",
     "del": "^3.0.0",
-    "express": "~4.16.3",
-    "express-session": "^1.2.0",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "gravatar": "^1.0.6",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.3.0",
@@ -30,7 +28,7 @@
     "mkdirp": "^0.5.0",
     "moment": "^2.22.2",
     "mongoose": "5.2.8",
-    "morgan": "~1.9.0",
+    "morgan": "^1.9.0",
     "node-telegram-bot-api": "^0.30.0",
     "nodemailer": "^4.6.8",
     "qn": "^1.3.0",
