--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
-    "marked": "^0.5.0",
+    "markdown-it": "^8.4.2",
     "md5-file": "^4.0.0",
     "mkdirp": "^0.5.0",
     "moment": "^2.22.2",
