--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sendgrid/mail": "^6.3.1",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "bson-objectid": "^1.2.3",
     "compression": "^1.7.3",
     "connect-multiparty": "^2.1.1",
     "connect-redis": "^3.3.3",
@@ -34,7 +35,6 @@
     "qn": "^1.3.0",
     "qs": "^6.5.2",
     "serve-favicon": "^2.5.0",
-    "shortid": "^2.2.13",
     "strip": "3.0.0",
     "video-extracter": "^1.0.3",
     "xss": "^1.0.3"
