--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "body-parser": "^1.18.3",
     "bson-objectid": "^1.2.4",
     "compression": "^1.7.3",
@@ -21,17 +21,17 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "gravatar": "^1.8.0",
-    "jade": "~1.11.0",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "markdown-it": "^8.4.2",
     "md5-file": "^4.0.0",
     "mkdirp": "^0.5.0",
     "moment": "^2.22.2",
-    "mongoose": "5.2.8",
+    "mongoose": "^5.7.3",
     "morgan": "^1.9.1",
     "node-telegram-bot-api": "^0.30.0",
     "nodemailer": "^4.7.0",
+    "pug": "^2.0.4",
     "qn": "^1.3.0",
     "qs": "^6.6.0",
     "serve-favicon": "^2.5.0",
