--- a/package.json
+++ b/package.json
@@ -9,38 +9,39 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@sendgrid/mail": "^6.3.1",
-    "axios": "^0.18.0",
-    "body-parser": "^1.18.3",
-    "bson-objectid": "^1.2.4",
-    "compression": "^1.7.3",
+    "@sendgrid/mail": "^6.4.0",
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "bson-objectid": "^1.3.0",
+    "compression": "^1.7.4",
     "connect-multiparty": "^2.2.0",
-    "connect-redis": "^3.4.0",
-    "csurf": "^1.8.3",
-    "del": "^3.0.0",
-    "express": "^4.16.4",
-    "express-session": "^1.15.6",
+    "connect-redis": "^4.0.3",
+    "csurf": "^1.10.0",
+    "del": "^5.1.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "gravatar": "^1.8.0",
-    "jade": "~1.11.0",
-    "jsonwebtoken": "^8.4.0",
-    "lodash": "^4.17.11",
-    "markdown-it": "^8.4.2",
+    "jade": "^1.11.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "markdown-it": "^10.0.0",
     "md5-file": "^4.0.0",
-    "mkdirp": "^0.5.0",
-    "moment": "^2.22.2",
-    "mongoose": "5.2.8",
+    "mkdirp": "^0.5.1",
+    "moment": "^2.24.0",
+    "mongoose": "^5.7.13",
     "morgan": "^1.9.1",
-    "node-telegram-bot-api": "^0.30.0",
-    "nodemailer": "^4.7.0",
+    "node-telegram-bot-api": "^0.40.0",
+    "nodemailer": "^6.3.1",
     "qn": "^1.3.0",
-    "qs": "^6.6.0",
+    "qs": "^6.9.1",
+    "redis": "^2.8.0",
     "serve-favicon": "^2.5.0",
-    "strip": "3.0.0",
+    "strip": "^3.0.0",
     "video-extracter": "^1.0.3",
-    "xss": "^1.0.3"
+    "xss": "^1.0.6"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0",
-    "nodemon": "^1.18.7"
+    "cross-env": "^6.0.3",
+    "nodemon": "^2.0.1"
   }
 }
