--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "gravatar": "^1.8.0",
+    "jade": "^1.11.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "markdown-it": "^10.0.0",
@@ -31,7 +32,6 @@
     "morgan": "^1.9.1",
     "node-telegram-bot-api": "^0.40.0",
     "nodemailer": "^6.3.1",
-    "pug": "^2.0.4",
     "qn": "^1.3.0",
     "qs": "^6.9.1",
     "redis": "^2.8.0",
